--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
@@ -8,3 +8,94 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: "General Sans";
+    src:  url('../../fonts/general-sans/GeneralSans-Regular.eot');
+    src:  url('../../fonts/general-sans/GeneralSans-Regular.eot#iefix') format('embedded-opentype'),
+      url('../../fonts/general-sans/GeneralSans-Regular.ttf') format('truetype'),
+      url('../../fonts/general-sans/GeneralSans-Regular.woff') format('woff'),
+      url('../../fonts/general-sans/GeneralSans-Regular.svg') format('svg'),
+      url('../../fonts/general-sans/GeneralSans-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: "General Sans Medium";
+    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot');
+    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
+      url('../../fonts/general-sans/GeneralSans-Medium.ttf') format('truetype'),
+      url('../../fonts/general-sans/GeneralSans-Medium.woff') format('woff'),
+      url('../../fonts/general-sans/GeneralSans-Medium.svg') format('svg'),
+      url('../../fonts/general-sans/GeneralSans-Medium.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: "General Sans Italic";
+    src:  url('../../fonts/general-sans/GeneralSans-Italic.eot');
+    src:  url('../../fonts/general-sans/GeneralSans-Italic.eot#iefix') format('embedded-opentype'),
+      url('../../fonts/general-sans/GeneralSans-Italic.ttf') format('truetype'),
+      url('../../fonts/general-sans/GeneralSans-Italic.woff') format('woff'),
+      url('../../fonts/general-sans/GeneralSans-Italic.svg') format('svg'),
+      url('../../fonts/general-sans/GeneralSans-Italic.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: "General Sans Medium Italic";
+    src:  url('../../fonts/general-sans/GeneralSans-MediumItalic.eot');
+    src:  url('../../fonts/general-sans/GeneralSans-MediumItalic.eot#iefix') format('embedded-opentype'),
+      url('../../fonts/general-sans/GeneralSans-MediumItalic.ttf') format('truetype'),
+      url('../../fonts/general-sans/GeneralSans-MediumItalic.woff') format('woff'),
+      url('../../fonts/general-sans/GeneralSans-MediumItalic.svg') format('svg'),
+      url('../../fonts/general-sans/GeneralSans-MediumItalic.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+  font-family: "Reckless Neue Bold";
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Bold.eot');
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Bold.eot#iefix') format('embedded-opentype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Bold.ttf') format('truetype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Bold.woff') format('woff'),
+    url('../../fonts/reckless-neue/RecklessNeue-Bold.svg') format('svg'),
+    url('../../fonts/reckless-neue/RecklessNeue-Bold.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: "Reckless Neue Book";
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Book.eot');
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Book.eot#iefix') format('embedded-opentype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Book.ttf') format('truetype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Book.woff') format('woff'),
+    url('../../fonts/reckless-neue/RecklessNeue-Book.svg') format('svg'),
+    url('../../fonts/reckless-neue/RecklessNeue-Book.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: "Reckless Neue Medium";
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Medium.eot');
+  src:  url('../../fonts/reckless-neue/RecklessNeue-Medium.eot#iefix') format('embedded-opentype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Medium.ttf') format('truetype'),
+    url('../../fonts/reckless-neue/RecklessNeue-Medium.woff') format('woff'),
+    url('../../fonts/reckless-neue/RecklessNeue-Medium.svg') format('svg'),
+    url('../../fonts/reckless-neue/RecklessNeue-Medium.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
