--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_colors.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_colors.scss
@@ -20,7 +20,7 @@
 
 @each $border-color, $properties in $colors {
     
-    .border-#{$text-color} {
+    .border-#{$border-color} {
         border-color: $properties;
     }
 }
