--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_bootstrap-variables.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_bootstrap-variables.scss
@@ -57,9 +57,9 @@ $gray: $gray-800 !default;
 
 // Primary colors
 $primary-red: #D72027 !default;
-$dark-red: #AD1A1F !default;
-$light-red: #811317 !default;
-$ultra-light-red: #540D0F !default;
+$dark-red: #A1181D !default;
+$light-red: #F3BABC !default;
+$ultra-light-red: #FBE9E9 !default;
 
 //Secondary colors
 $secondary: #101922 !default;
