--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
@@ -1,48 +1,62 @@
 // Font files here
 
-@font-face {
-    font-family: "sunset-gothic-bold-pro";
-    src: url("../../fonts/sunset-gothic-bold-pro.woff2") format("woff2"),
-        url("../../fonts/sunset-gothic-bold-pro.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
+// @font-face {
+//     font-family: "sunset-gothic-bold-pro";
+//     src: url("../../fonts/sunset-gothic-bold-pro.woff2") format("woff2"),
+//         url("../../fonts/sunset-gothic-bold-pro.woff") format("woff");
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: swap;
+// }
 
 @font-face {
     font-family: "General Sans";
-    src:  url('../../fonts/general-sans/GeneralSans-Regular.eot');
-    src:  url('../../fonts/general-sans/GeneralSans-Regular.eot#iefix') format('embedded-opentype'),
-      url('../../fonts/general-sans/GeneralSans-Regular.ttf') format('truetype'),
-      url('../../fonts/general-sans/GeneralSans-Regular.woff') format('woff'),
-      url('../../fonts/general-sans/GeneralSans-Regular.svg') format('svg'),
-      url('../../fonts/general-sans/GeneralSans-Regular.otf') format('opentype');
+    src:  url('#{$font-path}/GeneralSans-Regular.eot');
+    src:  url('#{$font-path}/GeneralSans-Regular.eot#iefix') format('embedded-opentype'),
+      url('#{$font-path}/GeneralSans-Regular.ttf') format('truetype'),
+      url('#{$font-path}/GeneralSans-Regular.woff') format('woff'),
+      url('#{$font-path}/GeneralSans-Regular.svg') format('svg'),
+      url('#{$font-path}/GeneralSans-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
 
+// @font-face {
+//     font-family: "General Sans Medium";
+//     src:  url('./#{$font-path}/GeneralSans-Medium.eot');
+//     src:  url('./#{$font-path}/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
+//       url('./#{$font-path}/GeneralSans-Medium.ttf') format('truetype'),
+//       url('./#{$font-path}/GeneralSans-Medium.woff') format('woff'),
+//       url('./#{$font-path}/GeneralSans-Medium.svg') format('svg'),
+//       url('./#{$font-path}/GeneralSans-Medium.otf') format('opentype');
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: block;
+// }
+
+
 @font-face {
-    font-family: "General Sans Medium";
-    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot');
-    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
-      url('../../fonts/general-sans/GeneralSans-Medium.ttf') format('truetype'),
-      url('../../fonts/general-sans/GeneralSans-Medium.woff') format('woff'),
-      url('../../fonts/general-sans/GeneralSans-Medium.svg') format('svg'),
-      url('../../fonts/general-sans/GeneralSans-Medium.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: "General Sans Medium";
+  src:  url('#{$font-path}/GeneralSans-Medium.eot');
+  src:  url('#{$font-path}/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
+    url('#{$font-path}/GeneralSans-Medium.ttf') format('truetype'),
+    url('#{$font-path}/GeneralSans-Medium.woff') format('woff'),
+    url('#{$font-path}/GeneralSans-Medium.svg') format('svg'),
+    url('#{$font-path}/GeneralSans-Medium.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
 @font-face {
     font-family: "General Sans Italic";
-    src:  url('../../fonts/general-sans/GeneralSans-Italic.eot');
-    src:  url('../../fonts/general-sans/GeneralSans-Italic.eot#iefix') format('embedded-opentype'),
-      url('../../fonts/general-sans/GeneralSans-Italic.ttf') format('truetype'),
-      url('../../fonts/general-sans/GeneralSans-Italic.woff') format('woff'),
-      url('../../fonts/general-sans/GeneralSans-Italic.svg') format('svg'),
-      url('../../fonts/general-sans/GeneralSans-Italic.otf') format('opentype');
+    src:  url('#{$font-path}/GeneralSans-Italic.eot');
+    src:  url('#{$font-path}/GeneralSans-Italic.eot#iefix') format('embedded-opentype'),
+      url('#{$font-path}/GeneralSans-Italic.ttf') format('truetype'),
+      url('#{$font-path}/GeneralSans-Italic.woff') format('woff'),
+      url('#{$font-path}/GeneralSans-Italic.svg') format('svg'),
+      url('#{$font-path}/GeneralSans-Italic.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -50,12 +64,12 @@
 
 @font-face {
     font-family: "General Sans Medium Italic";
-    src:  url('../../fonts/general-sans/GeneralSans-MediumItalic.eot');
-    src:  url('../../fonts/general-sans/GeneralSans-MediumItalic.eot#iefix') format('embedded-opentype'),
-      url('../../fonts/general-sans/GeneralSans-MediumItalic.ttf') format('truetype'),
-      url('../../fonts/general-sans/GeneralSans-MediumItalic.woff') format('woff'),
-      url('../../fonts/general-sans/GeneralSans-MediumItalic.svg') format('svg'),
-      url('../../fonts/general-sans/GeneralSans-MediumItalic.otf') format('opentype');
+    src:  url('#{$font-path}/GeneralSans-MediumItalic.eot');
+    src:  url('#{$font-path}/GeneralSans-MediumItalic.eot#iefix') format('embedded-opentype'),
+      url('#{$font-path}/GeneralSans-MediumItalic.ttf') format('truetype'),
+      url('#{$font-path}/GeneralSans-MediumItalic.woff') format('woff'),
+      url('#{$font-path}/GeneralSans-MediumItalic.svg') format('svg'),
+      url('#{$font-path}/GeneralSans-MediumItalic.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -63,12 +77,12 @@
 
 @font-face {
   font-family: "Reckless Neue Bold";
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Bold.eot');
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Bold.eot#iefix') format('embedded-opentype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Bold.ttf') format('truetype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Bold.woff') format('woff'),
-    url('../../fonts/reckless-neue/RecklessNeue-Bold.svg') format('svg'),
-    url('../../fonts/reckless-neue/RecklessNeue-Bold.otf') format('opentype');
+  src:  url('#{$font-path}/RecklessNeue-Bold.eot');
+  src:  url('#{$font-path}/RecklessNeue-Bold.eot#iefix') format('embedded-opentype'),
+    url('#{$font-path}/RecklessNeue-Bold.ttf') format('truetype'),
+    url('#{$font-path}/RecklessNeue-Bold.woff') format('woff'),
+    url('#{$font-path}/RecklessNeue-Bold.svg') format('svg'),
+    url('#{$font-path}/RecklessNeue-Bold.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -76,12 +90,12 @@
 
 @font-face {
   font-family: "Reckless Neue Book";
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Book.eot');
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Book.eot#iefix') format('embedded-opentype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Book.ttf') format('truetype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Book.woff') format('woff'),
-    url('../../fonts/reckless-neue/RecklessNeue-Book.svg') format('svg'),
-    url('../../fonts/reckless-neue/RecklessNeue-Book.otf') format('opentype');
+  src:  url('#{$font-path}/RecklessNeue-Book.eot');
+  src:  url('#{$font-path}/RecklessNeue-Book.eot#iefix') format('embedded-opentype'),
+    url('#{$font-path}/RecklessNeue-Book.ttf') format('truetype'),
+    url('#{$font-path}/RecklessNeue-Book.woff') format('woff'),
+    url('#{$font-path}/RecklessNeue-Book.svg') format('svg'),
+    url('#{$font-path}/RecklessNeue-Book.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -89,12 +103,12 @@
 
 @font-face {
   font-family: "Reckless Neue Medium";
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Medium.eot');
-  src:  url('../../fonts/reckless-neue/RecklessNeue-Medium.eot#iefix') format('embedded-opentype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Medium.ttf') format('truetype'),
-    url('../../fonts/reckless-neue/RecklessNeue-Medium.woff') format('woff'),
-    url('../../fonts/reckless-neue/RecklessNeue-Medium.svg') format('svg'),
-    url('../../fonts/reckless-neue/RecklessNeue-Medium.otf') format('opentype');
+  src:  url('#{$font-path}/RecklessNeue-Medium.eot');
+  src:  url('#{$font-path}/RecklessNeue-Medium.eot#iefix') format('embedded-opentype'),
+    url('#{$font-path}/RecklessNeue-Medium.ttf') format('truetype'),
+    url('#{$font-path}/RecklessNeue-Medium.woff') format('woff'),
+    url('#{$font-path}/RecklessNeue-Medium.svg') format('svg'),
+    url('#{$font-path}/RecklessNeue-Medium.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
