--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_texture.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_texture.scss
@@ -1,5 +1,5 @@
 .bg-texture {
     background:
         linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),
-        url('./icons/texture-pattern.webp') no-repeat center center/cover;
+        url('../../images/texture/texture-pattern.webp') no-repeat center center/cover;
 }
