WTFA-11 : Build issue solved and errors in scss resolved

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -31,7 +31,7 @@
 @import 'global/functions';
 @import 'global/icons';
 @import 'global/texture';
-@import './common/header-category';
+//@import './common/header-category';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
