--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../../fonts/icomoon.eot?kxuk4y');
-  src:  url('../../fonts/icomoon.eot?kxuk4y#iefix') format('embedded-opentype'),
-    url('../../fonts/icomoon.ttf?kxuk4y') format('truetype'),
-    url('../../fonts/icomoon.woff?kxuk4y') format('woff'),
-    url('../../fonts/icomoon.svg?kxuk4y#icomoon') format('svg');
+  src:  url('./../../fonts/figma-icons/icomoon.eot?kxuk4y');
+  src:  url('./../../fonts/figma-icons/icomoon.eot?kxuk4y#iefix') format('embedded-opentype'),
+    url('./../../fonts/figma-icons/icomoon.ttf?kxuk4y') format('truetype'),
+    url('./../../fonts/figma-icons/icomoon.woff?kxuk4y') format('woff'),
+    url('./../../fonts/figma-icons/icomoon.svg?kxuk4y#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,33 +25,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-linkedin:before {
+.icon-linkedin::before {
   content: "\e909";
 }
-.icon-arrow-left:before {
+.icon-arrow-left::before {
   content: "\e900";
 }
-.icon-arrow-right:before {
+.icon-arrow-right::before {
   content: "\e901";
 }
-.icon-chevron-down:before {
+.icon-chevron-down::before {
   content: "\e902";
 }
-.icon-menu:before {
+.icon-menu::before {
   content: "\e903";
 }
-.icon-pause:before {
+.icon-pause::before {
   content: "\e904";
 }
-.icon-phone-call:before {
+.icon-phone-call::before {
   content: "\e905";
 }
-.icon-play:before {
+.icon-play::before {
   content: "\e906";
 }
-.icon-quote:before {
+.icon-quote::before {
   content: "\e907";
 }
-.icon-x-mark:before {
+.icon-x-mark::before {
   content: "\e908";
 }
