WTFA-11 : Font issue unsolved

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
@@ -1,10 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./../../fonts/figma-icons/icomoon.eot?kxuk4y');
-  src:  url('./../../fonts/figma-icons/icomoon.eot?kxuk4y#iefix') format('embedded-opentype'),
-    url('./../../fonts/figma-icons/icomoon.ttf?kxuk4y') format('truetype'),
-    url('./../../fonts/figma-icons/icomoon.woff?kxuk4y') format('woff'),
-    url('./../../fonts/figma-icons/icomoon.svg?kxuk4y#icomoon') format('svg');
+  src:  url('../../fonts/figma-icons/icomoon.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: block;
