WTFA-11 : Font issue unsolved

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -30,7 +30,9 @@
 @import 'global/colors';
 @import 'global/functions';
 @import 'global/icons';
+@import 'global/typography';
 @import 'global/texture';
+@import 'global/grids';
 //@import './common/header-category';
 
 /** Extra layer of bootstrap Only */
