--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_fonts.scss
@@ -22,17 +22,31 @@
     font-display: block;
 }
 
+// @font-face {
+//     font-family: "General Sans Medium";
+//     src:  url('./../../fonts/general-sans/GeneralSans-Medium.eot');
+//     src:  url('./../../fonts/general-sans/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
+//       url('./../../fonts/general-sans/GeneralSans-Medium.ttf') format('truetype'),
+//       url('./../../fonts/general-sans/GeneralSans-Medium.woff') format('woff'),
+//       url('./../../fonts/general-sans/GeneralSans-Medium.svg') format('svg'),
+//       url('./../../fonts/general-sans/GeneralSans-Medium.otf') format('opentype');
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: block;
+// }
+
+
 @font-face {
-    font-family: "General Sans Medium";
-    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot');
-    src:  url('../../fonts/general-sans/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
-      url('../../fonts/general-sans/GeneralSans-Medium.ttf') format('truetype'),
-      url('../../fonts/general-sans/GeneralSans-Medium.woff') format('woff'),
-      url('../../fonts/general-sans/GeneralSans-Medium.svg') format('svg'),
-      url('../../fonts/general-sans/GeneralSans-Medium.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: "General Sans Medium";
+  src:  url('#{$font-path}/general-sans/GeneralSans-Medium.eot');
+  src:  url('#{$font-path}/general-sans/GeneralSans-Medium.eot#iefix') format('embedded-opentype'),
+    url('#{$font-path}/general-sans/GeneralSans-Medium.ttf') format('truetype'),
+    url('#{$font-path}/general-sans/GeneralSans-Medium.woff') format('woff'),
+    url('#{$font-path}/general-sans/GeneralSans-Medium.svg') format('svg'),
+    url('#{$font-path}/general-sans/GeneralSans-Medium.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
 @font-face {
