WTFA-11 : Font issue watched
WTFA-13: leadspace frontend done

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/leadspace.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/leadspace.scss
@@ -1,3 +1,30 @@
 .leadspace{
-    color:yellow;
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    &__image{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__overlay{
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__heading {
+        position: absolute;
+        z-index: 2;
+        color: #fff;
+        // top: 65%;
+        left: 10%;
+        width: 16ch;
+        bottom: 10%;
+        // padding-inline: 28px;
+    }
 }
