--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -37,6 +37,8 @@
 
 // Components Scss
 @import './components/footer.scss';
+// Component Scss
+@import 'styles/leadspace.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
