--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -35,6 +35,9 @@
 @import 'global/grids';
 //@import './common/header-category';
 
+// Components Scss
+@import './components/footer.scss';
+
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
 @import './../../node_modules/bootstrap/scss/grid';
