WTFA-21: Featured Product Backend

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../../fonts/figma-icons/icomoon.woff') format('woff');
+  src:  url('/wp-content/themes/outside-traineeship-boilerplate/public/fonts/figma-icons/icomoon.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: block;
