WTFA-11: Styleguide base

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -39,6 +39,8 @@
 @import './components/footer.scss';
 // Component Scss
 @import 'styles/leadspace.scss';
+// Styleguide Scss
+@import './styleguide.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
