--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
@@ -2,57 +2,141 @@
     background-color: white;
 }
 
+
+
 .styleguide {
-    &-wrap {
-        padding: 15px 15px 0;
-
-        @media (min-width: 991px) {
-            padding: 45px 35px 0;
+    
+    .heading {
+        h2 {
+            padding-block: 10px 20px;
+            border-bottom: 1px solid;
+            color: $orange;
+            // background-color: $orange;
+            // color: #fff; 
+            // padding: 20px; 
+            font-size: 30px; 
+            text-transform: uppercase;   
         }
     }
 
-    &-header {
-        border-bottom: 1px solid #d8d8d8;
-        padding: 0 0 20px;
+    .foot{
+        background-color:$blue;
+        color: #fff;
+        padding: 20px;
+        text-align: center; 
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
 
-        h4 {
-            font-size: 35px;
+    .sidebar{
+        width: 100%;
+        padding-right: 0;
+        margin-right: 0;
+        position: relative;
+        margin-bottom: 20px;
+        &__list {
+            .list-group {
+                &-item {
+                    padding-bottom: 10px;
+                    border-bottom: 1px solid gray;
+                }
+
+                a {
+                    list-style-type: none;
+                    text-decoration: none;
+                    color: $blue;
+                    padding: 10px;
+                    font-size: 1.25rem;
+                    display: block;
+                }
+                a:hover{
+                    color: $orange;
+                }
+                a:active{
+                    color: $orange;
+                }
+            }
+        }
+        .color {
+            $block: ".color";
+            
+            &__container {
+                width: 100%;
+                padding-block: 0px 30px;
+                border-bottom: 1px solid;
+            }
+    
+            #{$block}__list {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+    
+                #{$block}__card {
+                    width: 100%;
+                    height: 150px;
+                    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+                    @media screen and (min-width: 600px) {  
+                        flex-basis: calc(50% - 10px); 
+                    }
+    
+                    @media screen and (min-width: 1024px) {  
+                        flex-basis: calc(25% - 30px); 
+                    }
+    
+                    code {
+                        background-color: #fff;
+                        padding: 10px;
+                        width: 100%;
+                    }
+                }
+    
+                
+    
+                #{$block}__body {
+                    padding: 20px;
+                    color: #fff;
+    
+                    > * {
+                        display: block;
+                    }
+                }
+            }
         }
     }
 }
 
-.sidebar {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 5px;
-    padding-top: 35px;
+// .sidebar {
+//     position: -webkit-sticky;
+//     position: sticky;
+//     top: 5px;
+//     padding-top: 35px;
 
-    .list-group-item {
-        border: none;
-        border-bottom: 1px solid #d8d8d8;
-        margin-bottom: 15px;
-        padding: 0 0 15px;
+//     .list-group-item {
+//         border: none;
+//         border-bottom: 1px solid #d8d8d8;
+//         margin-bottom: 15px;
+//         padding: 0 0 15px;
 
-        &::before {
-            display: none;
-        }
+//         &::before {
+//             display: none;
+//         }
 
-        > a {
-            color: #3d4248;
-            text-decoration: none;
-            &:hover,
-            &:focus {
-                color: #000;
-            }
-            &::after {
-                display: none;
-            }
-            &.active {
-                color: #000;
-            }
-        }
-    }
-}
+//         > a {
+//             color: #3d4248;
+//             text-decoration: none;
+//             &:hover,
+//             &:focus {
+//                 color: #000;
+//             }
+//             &::after {
+//                 display: none;
+//             }
+//             &.active {
+//                 color: #000;
+//             }
+//         }
+//     }
+// }
 
 .content-wrap {
     border-bottom: 1px solid #d8d8d8;
