WTFA-24: Services frontend and button scss changed

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -39,6 +39,7 @@
 @import './components/footer.scss';
 // Component Scss
 @import 'styles/leadspace.scss';
+@import 'styles/department.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
