--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_buttons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_buttons.scss
@@ -5,6 +5,7 @@
 .btn-primary {
     background-color: $primary-red;
     border: none;
+    border-radius: 0;
     color: $neutral-50;
 
     display: flex;
@@ -44,6 +45,7 @@
 .btn-secondary {
     background: transparent;
     border: none;
+    border-radius: 0;
     border: 1px solid $primary-red;
     color: $primary-red;
 
@@ -86,6 +88,7 @@
 .btn-tertiary {
     background: transparent;
     border: none;
+    border-radius: 0;
     border-bottom: 1px solid $primary-red;
     color: $primary-red;
 
