WTFA-11 : Styleguide contents all added except typography

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
@@ -190,9 +190,18 @@
                             padding-inline: 8px;
                             padding-block: 4px;
                             border-radius: 5px;
+                            align-self: center;
                         }
+                    }
+                }
 
-                        ;
+                .favicon {
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+
+                    &__container {
+                        display: flex;
+                        justify-content: space-around;
                     }
                 }
             }
