WTFA-17 : Header developed

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_typography.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_typography.scss
@@ -43,7 +43,7 @@
 
 @each $button-link, $properties in $button-links {
     .#{$button-link} {
-        @if $button-link == 'lg' {
+        @if $button-link == 'btn-lg' {
             font-family: 'General Sans Medium';
         }
         @else{
