--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_custom-variables.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_custom-variables.scss
@@ -400,7 +400,7 @@ $captions: (
 );
 
 $button-links: (
-    "lg": (
+    "btn-lg": (
         "font-size": 16px,
         "line-height": 150%,
         "font-weight": 500,
@@ -418,7 +418,7 @@ $button-links: (
             )
         )
     ),
-    "nav": (
+    "btn-nav": (
         "font-size": 16px,
         "line-height": 150%,
         "font-weight": 500,
