WTFA-29 : Our partners grid designed
WTFA-29 : css updated

WTFA-28 : Minor css changes

WTFA-29 : custom.scss created

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -37,6 +37,8 @@
 
 // Components Scss
 @import './components/footer.scss';
+@import './components/section-title.scss';
+@import './components/partners.scss';
 // Component Scss
 @import 'styles/leadspace.scss';
 
