WTFA-32: features refinements

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_bootstrap-variables.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/settings/_bootstrap-variables.scss
@@ -473,16 +473,16 @@ $gradient: linear-gradient(180deg, rgba($white, 0.15), rgba($white, 0)) !default
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  '3xs': var(--space-3xs),
-  '2xs': var(--space-2xs),
-  'xs': var(--space-xs),
-  's': var(--space-s),
-  'm': var(--space-m),
-  'l': var(--space-l),
-  'xl': var(--space-xl),
-  '2xl': var(--space-2xl),
-  '3xl': var(--space-3xl),
-  '3xs-2xs': var(--space-3xs-2xs),
+  '3xs': $spacer * .125,
+  '2xs': $spacer * .25,
+  'xs': $spacer * .5,
+  's': $spacer * .75,
+  'm': $spacer,
+  'l': $spacer * 2,
+  'xl': $spacer * 4,
+  '2xl':$spacer * 6,
+  '3xl': $spacer * 8,
+  '3xs-2xs': $spacer * 10,
   '2xs-xs': var(--space-2xs-xs),
   'xs-s': var(--space-xs-s),
   's-m': var(--space-s-m),
