--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
@@ -8,8 +8,9 @@
         width: 100%;
         height: 100%;
     }
+    
     #{$this}__content{
-        margin-top: 4rem;
+        // margin-top: 4rem;
         margin-inline: 1.75rem;
         .body__content{
             margin-bottom: 3rem;
@@ -18,47 +19,85 @@
     .features__button{
         margin-inline: auto;
     }
+
+    // about scss
+    .img-padding{
+        padding: 1.75rem;
+        aspect-ratio: 1/1;
+        
+
+        object-fit: cover;
+    }
+
     @include media-breakpoint-up(sm){
         #{$this}__maincontainer{
             padding-block: 7.5rem;
-             padding-inline: 2rem;
+            padding-inline: 2rem;
     
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            
             height: 100%;
             // padding-inline: 2rem;
             &.left{
                 
-                .features__content{
+                #{$this}__content{
                     order: -1;
                 }
             }
-            .features__image{
-                width: 50%;
+            #{$this}__image{
+                width: 100%;
             }
-            .features__content{
-                margin-top: 0;
+            #{$this}__content{
+            
                 // height: 100%;
+                margin-block: auto;
+            }
+             // about scss
+            .img-padding{
+                padding: 0;
+                object-fit: cover;
             }
         }
         
         
         
     }
-    @include media-breakpoint-up(md){
-        
 
+    @include media-breakpoint-up(md){
         #{$this}__maincontainer{
-            margin-inline: auto;
-            max-width: 80%;
-            
-    
-            .features__content {
-                margin-right: 10%;
-            }
+            gap: 50px;
         }
-        
+    }
+    @include media-breakpoint-up(lg){
+        padding-inline: 5rem;
+        #{$this}__maincontainer{
+            height: 100%;
+            gap: 100px;
+            #{$this}__imagecontainer{
+                height: 100%;
+            
+                // img{
+                //     height: 100%;
+                // }
+            }
+            
+            #{$this}__content {
+                margin-right: 10%;
+                margin-block: auto;
+
+            }
+            
+        }
+        // .ms-5{
+        //     margin-left: 8%;
+        // }
+        // .me-5{
+        //     margin-right: 8%;
+        // }
+        .img-padding{
+            aspect-ratio: 6/5;
+        }
     }
    
 }
